--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -18,7 +18,7 @@
 }
 
 .hero__img {
-  position: absolute;
+  position: absolute !important;
   top: 0;
   left: 0;
   width: 100%;
